--- a/infrastructure/templates/target.template
+++ b/infrastructure/templates/target.template
@@ -31,7 +31,7 @@
 	"HostedZone" : {
 	  "Description" : "Domain to use",
 	  "Type" : "String",
-	  "Default" : "devopscloud.com"
+	  "Default" : "globustrends.com"
 	},
 
 	"EnvironmentType" : {
